fixed css white space issue

--- a/server/public/css/app.css
+++ b/server/public/css/app.css
@@ -4,10 +4,7 @@ html, body {
   margin: 0;
 }
 
-div {
-  color: white; 
-}
-
-div {
+.container-fluid {
   background-color: red; 
+  color: white; 
 }
